syntax = "proto3";

package grpc;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

option go_package = "github.com/elojah/trax/cmd/auth/grpc";

import "pkg/gogoproto/gogo.proto";

import "pkg/pbtypes/empty.proto";
import "pkg/pbtypes/string.proto";

import "internal/user/dto/user.proto";

service Auth {
	// Signup
	rpc Signup(dto.SignupReq) returns (pbtypes.Empty);

	// Signin
	rpc Signin(dto.SigninReq) returns (dto.SigninResp);

	// Signin Google
	rpc SigninGoogle(pbtypes.String) returns (dto.SigninResp);

	// Refresh token
	rpc RefreshToken(pbtypes.String) returns (dto.SigninResp);

    // Ping
    rpc Ping(pbtypes.Empty) returns (pbtypes.Empty);
}
